Change accessing to local FXML Files